--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -21,7 +21,7 @@
 <body>
 <div id='container'>
 
-  <h1><a href='../../index.html' title='simpl.info home page'>simpl.info</a> MediaStreamTrack.getSources</h1>
+  <h1>DEMO -  MediaStreamTrack.getSources</h1>
 
   <div class='select'>
     <label for='audioSource'>Audio source: </label><select id='audioSource'></select>
@@ -36,10 +36,6 @@
   <script src='script.js'></script>
 
   <p>This demo requires Chrome 30 or later.</p>
-
-  <p>For more information, see <a href='http://www.html5rocks.com/en/tutorials/getusermedia/intro/' title='Media capture article by Eric Bidelman on HTML5 Rocks'>Capturing Audio &amp; Video in HTML5</a> on HTML5 Rocks.</p>
-
-<a href='https://github.com/samdutton/simpl/blob/master/getusermedia/sources/js/main.js' title='View source for this page on GitHub' id='viewSource'>View source on github</a>
 </div>
 </body>
 </html>
